loose version constraints

--- a/mp_chart/pubspec.yaml
+++ b/mp_chart/pubspec.yaml
@@ -10,11 +10,11 @@ environment:
 dependencies:
   intl: any
   path_provider: any
-  screenshot: ^0.1.1
-  path_drawing: ^0.4.1
-  image_gallery_saver: ^1.2.2
-  optimized_gesture_detector: ^0.0.6
-  vector_math: ^2.0.8
+  screenshot: any
+  path_drawing: any
+  image_gallery_saver: any
+  optimized_gesture_detector: any
+  vector_math: any
   flutter:
     sdk: flutter
 
